@startuml ERD_Inventori_Barang

' Pengaturan Tampilan
skinparam linetype ortho
hide circle
skinparam classAttributeIconSize 0

' --- ENTITAS ---

entity "USERS" as users {
  *id : INTEGER <<PK>>
  --
  username : TEXT <<UNIQUE>>
  password : TEXT <<NOT NULL>>
  level : TEXT <<NOT NULL, CHECK(admin,user)>>
}

entity "CATEGORIES" as categories {
  *id : INTEGER <<PK>>
  --
  name : TEXT <<UNIQUE, NOT NULL>>
}

entity "SUPPLIERS" as suppliers {
  *id : INTEGER <<PK>>
  --
  supplier_name : TEXT <<NOT NULL>>
  address : TEXT
}

entity "ITEMS" as items {
  *id : INTEGER <<PK>>
  --
  item_code : TEXT <<UNIQUE, NOT NULL>>
  item_name : TEXT <<NOT NULL>>
  stock : INTEGER <<NOT NULL, DEFAULT 0>>
  purchase_price : REAL <<DEFAULT 0>>
  selling_price : REAL <<DEFAULT 0>>
  --
  category_id : INTEGER <<FK>>
  supplier_id : INTEGER <<FK>>
}

entity "TRANSACTIONS" as transactions {
  *id : INTEGER <<PK>>
  --
  transaction_date : TEXT <<NOT NULL>>
  quantity : INTEGER <<NOT NULL>>
  transaction_type : TEXT <<NOT NULL, CHECK(IN,OUT)>>
  notes : TEXT
  --
  item_id : INTEGER <<FK, NOT NULL>>
}

' --- RELASI ---

' Satu Kategori memiliki banyak Barang
categories ||--o{ items : category_id

' Satu Pemasok menyuplai banyak Barang  
suppliers ||--o{ items : supplier_id

' Satu Barang memiliki banyak riwayat Transaksi
items ||--o{ transactions : item_id

@enduml